compile-tests/fixtures/compile-errors/instantiation-too-many-type-parameters/input.ts
import createValidator, { register } from "../../../../dist/typecheck.macro";

interface Foo<T> {}
register("Foo");
createValidator<Foo<string, number>>();
